objects/Grid_SAP_token__mdt.object
<CustomObject>
    <fields>
        <fullName>Grid_Client_Id__c</fullName>
        <label>Client Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_Default_URL__c</fullName>
        <label>Default URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Grid_Password__c</fullName>
        <label>Password</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_Username__c</fullName>
        <label>Username</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>SAP token</label>
    <pluralLabel>SAP tokens</pluralLabel>
</CustomObject>